<resources>
    <string name="app_name">LocationManager</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_one_time_location">Request One Time location</string>
    <string name="request_location_updates">Request Continuous location</string>
    <string name="remove_location_updates">Stop Continuous location</string>
    <string name="show_background_points">Show background points</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="lat_long">Lat : %1$s\nLong : %2$s</string>
    <string name="from_notification">Come from Notification : %1$s</string>
    <string name="no_points">No points found</string>
    <string name="get_current_location">Get Current Location</string>
</resources>